--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,12 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="
+    margin: 0; 
+    background: rgb(92,99,123);
+    background: linear-gradient(135deg, rgba(92,99,123,1) 0%, rgba(23,29,47,1) 100%);
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
