--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     margin: 0; 
     background: rgb(92,99,123);
     background: linear-gradient(135deg, rgba(92,99,123,1) 0%, rgba(23,29,47,1) 100%);
+    /* max-height: 100vh; */
     "
   >
     <noscript>You need to enable JavaScript to run this app.</noscript>
